[metadata]
name = python-pom
summary = POM microframework to develop web UI tests easy, quickly and with pleasure
description-file = readme.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
author = Sergei Chipiga
author-email = schipiga@gmail.com
home-page = http://pom.readthedocs.io/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    pom

[build_sphinx]
all_files = 1
source-dir = docs/source
